--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
         <div class="hero-content">
             <h1 class="film-title">FOREIGN HOMELAND</h1>
             <p class="tagline">Discovering the true meaning of home in a foreign land.</p>
-            <a href="#cast" class="cta-button">Meet the Cast</a>
+            <a href="#cast" class="cta-button">
+                <span class="text-container">
+                    <span class="text">Meet the Cast</span>
+                </span>
+            </a>
         </div>
     </header>
 
