Isolate premium animation to 'Meet the Cast' button and restore default styles for other buttons

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="hero-content">
             <h1 class="film-title">FOREIGN HOMELAND</h1>
             <p class="tagline">Discovering the true meaning of home in a foreign land.</p>
-            <a href="#cast" class="cta-button">
+            <a href="#cast" class="cta-button btn-animated">
                 <span class="text-container">
                     <span class="text">Meet the Cast</span>
                 </span>
