Add YouTube social link to Related Links section

--- a/index.html
+++ b/index.html
@@ -396,6 +396,10 @@
                     class="social-link">
                     <span class="imdb-icon-text">IMDb</span>
                 </a>
+                <a href="https://www.youtube.com/watch?v=gXre6qjlM18" target="_blank" aria-label="YouTube"
+                    class="social-link">
+                    <i class="fab fa-youtube"></i>
+                </a>
             </div>
         </div>
     </section>
