--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <div class="card-info">
                         <h3>Ramtin Khorshidi</h3>
                         <p class="role">Reza</p>
-                        <button class="more-btn">More</button>
+                        <button class="more-btn" data-i18n="btn_more">More</button>
                     </div>
                 </div>
 
@@ -231,7 +231,7 @@
                     <div class="card-info">
                         <h3>Mostafa Pouralamdari</h3>
                         <p class="role">Jamshid</p>
-                        <button class="more-btn">More</button>
+                        <button class="more-btn" data-i18n="btn_more">More</button>
                     </div>
                 </div>
 
@@ -244,7 +244,7 @@
                     <div class="card-info">
                         <h3>Arash Minhas</h3>
                         <p class="role">Ahmad</p>
-                        <button class="more-btn">More</button>
+                        <button class="more-btn" data-i18n="btn_more">More</button>
                     </div>
                 </div>
 
@@ -257,7 +257,7 @@
                     <div class="card-info">
                         <h3>Safura Naghavi</h3>
                         <p class="role">Soheila</p>
-                        <button class="more-btn">More</button>
+                        <button class="more-btn" data-i18n="btn_more">More</button>
                     </div>
                 </div>
 
@@ -270,7 +270,7 @@
                     <div class="card-info">
                         <h3>Rick Koy</h3>
                         <p class="role">Jim</p>
-                        <button class="more-btn">More</button>
+                        <button class="more-btn" data-i18n="btn_more">More</button>
                     </div>
                 </div>
 
@@ -283,7 +283,7 @@
                     <div class="card-info">
                         <h3>Alexandra Scott</h3>
                         <p class="role">Susan Pike</p>
-                        <button class="more-btn">More</button>
+                        <button class="more-btn" data-i18n="btn_more">More</button>
                     </div>
                 </div>
 
@@ -296,7 +296,7 @@
                     <div class="card-info">
                         <h3>Cameron Ross</h3>
                         <p class="role">Customer 2</p>
-                        <button class="more-btn">More</button>
+                        <button class="more-btn" data-i18n="btn_more">More</button>
                     </div>
                 </div>
 
@@ -309,7 +309,7 @@
                     <div class="card-info">
                         <h3>Redi Zyka</h3>
                         <p class="role">Customer 1</p>
-                        <button class="more-btn">More</button>
+                        <button class="more-btn" data-i18n="btn_more">More</button>
                     </div>
                 </div>
 
