SEO Optimization: Added meta tags, keywords, and bilingual URL support

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <link rel="canonical" href="https://foreign-homeland-web.web.app">
     <meta name="theme-color" content="#0a0a0a">
 
+    <meta name="keywords"
+        content="Foreign Homeland, Film, Armin Zarringhalam, Iranian Cinema, Migration, Immigration, Calgary Film, Persian Movie, Diar Ghorbat, Ramtin Khorshidi, Zahra Masoumi, Mostafa Pouralamdari, Arash Minhas, Safura Naghavi">
+    <meta name="author" content="Armin Zarringhalam">
+    <meta name="robots" content="index, follow">
+
+    <!-- Bilingual / Internationalization SEO -->
+    <link rel="alternate" hreflang="en" href="https://foreign-homeland-web.web.app/" />
+    <link rel="alternate" hreflang="fa" href="https://foreign-homeland-web.web.app/?lang=fa" />
+    <link rel="alternate" hreflang="x-default" href="https://foreign-homeland-web.web.app/" />
+
     <!-- Open Graph / Meta tags for social sharing (Facebook, LinkedIn, etc.) -->
     <meta property="og:type" content="video.movie">
     <meta property="og:url" content="https://foreign-homeland-web.web.app">
@@ -370,23 +380,29 @@
 
             <!-- Premiere Background Slideshow: State is managed by carousel.js -->
             <div class="gallery">
-                <img src="images/Premiere Photos/_DSC8209-min.JPG" alt="Premiere Event 1" class="premiere-slide active"
+                <img src="images/Premiere Photos/_DSC8209-min.JPG"
+                    alt="Foreign Homeland World Premiere Red Carpet - Cast Group Photo" class="premiere-slide active"
                     loading="lazy" decoding="async" width="1200" height="800">
 
-                <img src="images/Premiere Photos/_DSC8254-min.JPG" alt="Premiere Event 2" class="premiere-slide"
-                    loading="lazy" decoding="async" width="1200" height="800">
+                <img src="images/Premiere Photos/_DSC8254-min.JPG"
+                    alt="Foreign Homeland Director Armin Zarringhalam at Premiere" class="premiere-slide" loading="lazy"
+                    decoding="async" width="1200" height="800">
 
-                <img src="images/Premiere Photos/_DSC8263-min.JPG" alt="Premiere Event 3" class="premiere-slide"
-                    loading="lazy" decoding="async" width="1200" height="800">
+                <img src="images/Premiere Photos/_DSC8263-min.JPG"
+                    alt="Foreign Homeland Cast on Stage at Bella Concert Hall" class="premiere-slide" loading="lazy"
+                    decoding="async" width="1200" height="800">
 
-                <img src="images/Premiere Photos/_DSC8269-min.JPG" alt="Premiere Event 4" class="premiere-slide"
-                    loading="lazy" decoding="async" width="1200" height="800">
+                <img src="images/Premiere Photos/_DSC8269-min.JPG"
+                    alt="Full Audience at Foreign Homeland Premiere in Calgary" class="premiere-slide" loading="lazy"
+                    decoding="async" width="1200" height="800">
 
-                <img src="images/Premiere Photos/_DSC8315-min.JPG" alt="Premiere Event 5" class="premiere-slide"
-                    loading="lazy" decoding="async" width="1200" height="800">
+                <img src="images/Premiere Photos/_DSC8315-min.JPG"
+                    alt="Foreign Homeland Premiere Event - Audience Celebration" class="premiere-slide" loading="lazy"
+                    decoding="async" width="1200" height="800">
 
-                <img src="images/Premiere Photos/_DSC8316-min.JPG" alt="Premiere Event 6" class="premiere-slide"
-                    loading="lazy" decoding="async" width="1200" height="800">
+                <img src="images/Premiere Photos/_DSC8316-min.JPG"
+                    alt="Foreign Homeland Movie Premiere - Red Carpet Moments" class="premiere-slide" loading="lazy"
+                    decoding="async" width="1200" height="800">
 
             </div>
 
