--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js" defer></script>
 
     <!-- Project Bundle: Contains all data and modules merged for performance -->
-    <script src="js/app.js" defer></script>
+    <script src="js/app.js?v=2.3" defer></script>
 
 </body>
 
